# base-compat

./: .ghci  .gitignore  .gitmodules  .travis.yml  CHANGES.markdown  LICENSE  Makefile  PreludeTest.hs  README.markdown  Setup.hs  Util.hs  base-compat.cabal  cabal.haskell-ci  cabal.project  check-Prelude.sh  dumpindex.hs  dumptypes.hs  genmod.sh  github.yml.patch  mk-index.sh  mkheader.sh  run-check.sh  travis.yml.patch
base-compat/: CHANGES.markdown  README.markdown  base-compat.cabal
base-compat/src/Control/Concurrent/: Compat.hs
base-compat/src/Control/Concurrent/Compat/: Repl.hs
base-compat/src/Control/Concurrent/MVar/: Compat.hs
base-compat/src/Control/Exception/: Compat.hs
base-compat/src/Control/Exception/Compat/: Repl.hs
base-compat/src/Control/Monad/: Compat.hs
base-compat/src/Control/Monad/Compat/: Repl.hs
base-compat/src/Control/Monad/Fail/: Compat.hs
base-compat/src/Data/Bifoldable/Compat/: Repl.hs
base-compat/src/Data/Bifoldable1/: Compat.hs
base-compat/src/Data/Bifoldable1/Compat/: Repl.hs
base-compat/src/Data/Bifunctor/: Compat.hs
base-compat/src/Data/Bifunctor/Compat/: Repl.hs
base-compat/src/Data/Bitraversable/: Compat.hs
base-compat/src/Data/Bitraversable/Compat/: Repl.hs
base-compat/src/Data/Bits/: Compat.hs
base-compat/src/Data/Bits/Compat/: Repl.hs
base-compat/src/Data/Bool/: Compat.hs
base-compat/src/Data/Bool/Compat/: Repl.hs
base-compat/src/Data/Complex/: Compat.hs
base-compat/src/Data/Complex/Compat/: Repl.hs
base-compat/src/Data/Either/: Compat.hs
base-compat/src/Data/Either/Compat/: Repl.hs
base-compat/src/Data/Foldable/: Compat.hs
base-compat/src/Data/Foldable/Compat/: Repl.hs
base-compat/src/Data/Foldable1/: Compat.hs
base-compat/src/Data/Foldable1/Compat/: Repl.hs
base-compat/src/Data/Function/: Compat.hs
base-compat/src/Data/Function/Compat/: Repl.hs
base-compat/src/Data/Functor/: Compat.hs
base-compat/src/Data/Functor/Compat/: Repl.hs
base-compat/src/Data/Functor/Compose/: Compat.hs
base-compat/src/Data/Functor/Identity/: Compat.hs
base-compat/src/Data/Functor/Product/: Compat.hs
base-compat/src/Data/Functor/Sum/: Compat.hs
base-compat/src/Data/IORef/: Compat.hs
base-compat/src/Data/IORef/Compat/: Repl.hs
base-compat/src/Data/List/: Compat.hs
base-compat/src/Data/List/Compat/: Repl.hs
base-compat/src/Data/List/NonEmpty/: Compat.hs
base-compat/src/Data/Monoid/: Compat.hs
base-compat/src/Data/Monoid/Compat/: Repl.hs
base-compat/src/Data/Proxy/: Compat.hs
base-compat/src/Data/Proxy/Compat/: Repl.hs
base-compat/src/Data/Ratio/: Compat.hs
base-compat/src/Data/Ratio/Compat/: Repl.hs
base-compat/src/Data/STRef/: Compat.hs
base-compat/src/Data/STRef/Compat/: Repl.hs
base-compat/src/Data/Semigroup/: Compat.hs
base-compat/src/Data/Semigroup/Compat/: Repl.hs
base-compat/src/Data/String/: Compat.hs
base-compat/src/Data/String/Compat/: Repl.hs
base-compat/src/Data/Traversable/: Compat.hs
base-compat/src/Data/Traversable/Compat/: Repl.hs
base-compat/src/Data/Tuple/: Compat.hs
base-compat/src/Data/Tuple/Compat/: Repl.hs
base-compat/src/Data/Type/Coercion/: Compat.hs
base-compat/src/Data/Type/Equality/: Compat.hs
base-compat/src/Data/Typeable/: Compat.hs
base-compat/src/Data/Typeable/Compat/: Repl.hs
base-compat/src/Data/Version/: Compat.hs
base-compat/src/Data/Version/Compat/: Repl.hs
base-compat/src/Data/Void/: Compat.hs
base-compat/src/Data/Void/Compat/: Repl.hs
base-compat/src/Data/Word/: Compat.hs
base-compat/src/Data/Word/Compat/: Repl.hs
base-compat/src/Debug/Trace/: Compat.hs
base-compat/src/Debug/Trace/Compat/: Repl.hs
base-compat/src/Foreign/: Compat.hs
base-compat/src/Foreign/Compat/: Repl.hs
base-compat/src/Foreign/ForeignPtr/: Compat.hs
base-compat/src/Foreign/ForeignPtr/Compat/: Repl.hs
base-compat/src/Foreign/ForeignPtr/Safe/: Compat.hs
base-compat/src/Foreign/ForeignPtr/Unsafe/: Compat.hs
base-compat/src/Foreign/Marshal/: Compat.hs
base-compat/src/Foreign/Marshal/Alloc/: Compat.hs
base-compat/src/Foreign/Marshal/Array/: Compat.hs
base-compat/src/Foreign/Marshal/Compat/: Repl.hs
base-compat/src/Foreign/Marshal/Unsafe/: Compat.hs
base-compat/src/Foreign/Marshal/Utils/: Compat.hs
base-compat/src/Numeric/: Compat.hs
base-compat/src/Numeric/Compat/: Repl.hs
base-compat/src/Numeric/Natural/: Compat.hs
base-compat/src/Numeric/Natural/Compat/: Repl.hs
base-compat/src/Prelude/: Compat.hs
base-compat/src/Prelude/Compat/: Repl.hs
base-compat/src/System/Environment/: Compat.hs
base-compat/src/System/Environment/Compat/: Repl.hs
base-compat/src/System/Exit/: Compat.hs
base-compat/src/System/Exit/Compat/: Repl.hs
base-compat/src/System/IO/Compat/: Repl.hs
base-compat/src/Text/Read/: Compat.hs
base-compat/src/Type/Reflection/: Compat.hs
check/: .gitignore  Control.Monad.Compat.types  Data.Complex.Compat.index  Data.Complex.Compat.types  Data.Foldable.Compat.index  Data.Foldable.Compat.types  Data.List.types  Data.Traversable.Compat.check.hs  Data.Traversable.Compat.index  Data.Traversable.Compat.types  Prelude.Compat.index  Prelude.check.hs  README.markdown  TypeCheck.hs  TypeDump.hs  Util.hs  dumpindex.hs  dumptypes.hs  mk-index.sh  run-check.sh  type-check.cabal
check/check-hs/: Control.Monad.Compat.check.hs  Data.Complex.Compat.check.hs  Data.Foldable.Compat.check.hs  Data.List.Compat.check.hs  Data.Monoid.Compat.check.hs  Data.Ratio.Compat.check.hs  Prelude.Compat.check.hs
check/exes/: dumpindex.hs  for-repl.hs
check/index/: Control.Monad.Compat.index  Data.Complex.Compat.index  Data.Foldable.Compat.index  Data.List.Compat.index  Data.Monoid.Compat.index  Data.Ratio.Compat.index  Prelude.Compat.index
check/lib/: TypeDump.hs  Util.hs
check/test/: TypeCheck.hs
check/types/: Control.Monad.Compat.types  Data.Complex.Compat.types  Data.Foldable.Compat.types  Data.List.Compat.types  Data.Monoid.Compat.types  Data.Ratio.Compat.types  Prelude.Compat.types
typediff/: package.yaml  typediff.cabal
typediff/src/: Main.hs  TypeDiff.hs
typediff/test/: TypeDiffSpec.hs
(+410 files in other folders)
