name:             base-compat
version:          0.4
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>, João Cristóvão <jmacristovao@gmail.com>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         System
synopsis:         A compatibility layer for base
description:      Ban CPP from your code.  See the README for what is covered:
                  <https://github.com/sol/base-compat#readme>

source-repository head
  type: git
  location: https://github.com/sol/base-compat

library
  exposed: False
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
    , errorcall-eq-instance
  extensions:
      CPP
    , PackageImports
    , NoImplicitPrelude
  ghc-options:
    -fno-warn-duplicate-exports

  hs-source-dirs:
      src

  if !os(windows)
    exposed-modules:
      -- stubbed for base < 4.4.0
      GHC.Event.Compat

  exposed-modules:
      -- with modifications
      Control.Applicative.Compat
      Data.Bool.Compat
      Data.Either.Compat
      Data.Foldable.Compat
      Data.Functor.Compat
      Data.Monoid.Compat
      Data.Traversable.Compat
      System.Environment.Compat
      Text.Read.Compat

      -- added Eq/Ord instance for ErrorCall
      Control.Exception.Compat
      Control.Exception.Base.Compat
      GHC.Exception.Compat

      -- fixed warnings
      GHC.ConsoleHandler.Compat
      GHC.IO.Encoding.CodePage.Compat
      Text.Show.Functions.Compat

      -- stubbed for base < 4.5.0
      GHC.Stack.Compat
      GHC.Stats.Compat

      -- stubbed for base < 4.4.0
      Control.Monad.ST.Lazy.Safe.Compat
      Control.Monad.ST.Lazy.Unsafe.Compat
      Control.Monad.ST.Safe.Compat
      Control.Monad.ST.Unsafe.Compat
      Control.Monad.Zip.Compat
      Data.Typeable.Internal.Compat
      Foreign.ForeignPtr.Safe.Compat
      Foreign.ForeignPtr.Unsafe.Compat
      Foreign.Marshal.Safe.Compat
      Foreign.Marshal.Unsafe.Compat
      Foreign.Safe.Compat
      GHC.Fingerprint.Compat
      GHC.Fingerprint.Type.Compat
      GHC.Float.ConversionUtils.Compat
      GHC.Float.RealFracMethods.Compat
      GHC.Foreign.Compat
      GHC.IO.Encoding.Failure.Compat

      -- stubbed for base < 4.3.0
      GHC.Conc.IO.Compat
      GHC.Conc.Signal.Compat
      GHC.Conc.Sync.Compat

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base > 4.0
    , base-compat
    , hspec >= 1.3
    , setenv
