name:             base-compat
version:          0.6.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012-2015 Simon Hengel,
                  (c) 2014 João Cristóvão
author:           Simon Hengel <sol@typeful.net>, João Cristóvão <jmacristovao@gmail.com>
maintainer:       Simon Hengel <sol@typeful.net>, João Cristóvão <jmacristovao@gmail.com>
build-type:       Simple
cabal-version:    >= 1.8
category:         System
synopsis:         A compatibility layer for base
description:      Ban CPP from your code.  See the README for what is covered:
                  <https://github.com/sol/base-compat#readme>

source-repository head
  type: git
  location: https://github.com/sol/base-compat

library
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
    , setenv
  extensions:
      CPP
    , NoImplicitPrelude
  ghc-options:
    -fno-warn-duplicate-exports

  hs-source-dirs:
      src

  exposed-modules:
      Prelude.Compat
      Control.Applicative.Compat
      Control.Exception.Compat
      Control.Monad.Compat
      Data.Bool.Compat
      Data.Either.Compat
      Data.Foldable.Compat
      Data.Function.Compat
      Data.Functor.Compat
      Data.List.Compat
      Data.Monoid.Compat
      Data.Traversable.Compat
      Data.Version.Compat
      Foreign.Marshal.Alloc.Compat
      Foreign.Marshal.Array.Compat
      Foreign.Storable.Compat
      System.Environment.Compat
      System.Exit.Compat
      Text.Read.Compat

  if impl(ghc >= 7.2)
    exposed-modules:
      GHC.Generics.Compat
    
    if impl(ghc < 7.6)
      -- Prior to GHC 7.6, GHC generics lived in ghc-prim
      build-depends: ghc-prim

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base > 4.0
    , base-compat
    , hspec >= 1.8
    , QuickCheck
