name:             typediff
version:          0.1.0
build-type:       Simple
cabal-version:    >= 1.10

executable typediff
  hs-source-dirs: driver, src
  main-is: Main.hs
  build-depends:
      base == 4.*
    , containers
    , uniplate
    , haskell-src-exts
  ghc-options: -Wall
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Spec.hs
  build-depends:
      base == 4.*
    , containers
    , uniplate
    , haskell-src-exts

    , hspec == 2.*
  ghc-options: -Wall
  default-language: Haskell2010
